changed the calc body to have a min-height instead of a fixed height and added padding to the buttons so that they wouldn't be squished

--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body {
 
 .calc-body {
   width: clamp(336px, 31.5vw, 600px);
-  height: clamp(432px, 42vw, 800px);
+  /* height: clamp(432px, 42vw, 800px); */
   display: flex;
   flex-direction: column;
   border-radius: 16px;
@@ -42,14 +42,14 @@ body {
 .screen-container > h3 {
   color: white;
   font-weight: 400;
-  margin: 8px 0 0 10px;
+  margin: 8px 0 10px 10px;
   font-size: clamp(0.69rem, 1.16vw, 1.4rem);
   word-wrap: break-word;
 }
 
 .screen {
-  width: 80%;
-  height: 65%;
+  width: 84%;
+  min-height: clamp(95.5px, 9.54vw, 183.5px);
   background-color: rgb(200, 200, 200);
   align-self: center;
   margin-bottom: clamp(18px, 1.6vw, 30px);
@@ -66,7 +66,8 @@ body {
   justify-content: flex-end;
   align-items: center;
   font-size: clamp(17px, 1.7vw, 32px);
-  word-wrap: break-word;
+
+  word-break: break-all;
 }
 
 .lower-screen {
@@ -75,8 +76,8 @@ body {
   justify-content: flex-end;
   font-size: clamp(30px, 2.8vw, 52px);
   align-items: center;
-  word-wrap: break-word;
   box-sizing: border-box;
+  word-break: break-all;
 }
 
 .buttons-container {
@@ -102,6 +103,8 @@ body {
   color: white;
   font-size: clamp(20px, 2.1vw, 40px);
   border-radius: 10px;
+  padding-top: clamp(14px, 1.36vw, 26px);
+  padding-bottom: clamp(14px, 1.36vw, 26px);
 }
 
 .operations {
